--- a/build.xml
+++ b/build.xml
@@ -7,7 +7,7 @@
 		</fileset>
 	</path>
 	
-	<target name="init">
+	<target name="init" default="clean">
 		<mkdir dir="build/classes"/>
 		<mkdir dir="dist" />
 	</target>
