--- a/build.xml
+++ b/build.xml
@@ -19,13 +19,20 @@
 	</target>
 	
 	<target name="war" depends="compile">
-		<war destfile="dist/AntExample.jar" webxml="WebContent/WEB-INF/web.xml">
+		<war destfile="dist/AntExample.war" webxml="WebContent/WEB-INF/web.xml">
 			<fileset dir="WebContent"/>
 			<lib dir="WebContent/WEB-INF/lib"/>
 			<classes dir="build/classes"/>
 		</war>
 	</target>
-	
+	<target name="buildAndDeploy" depends="buildWar">
+	  <deploy url="http://ec2-54-173-114-74.compute-1.amazonaws.com:8080"
+			  username="admin"
+			  password="admin"
+			  path="dist/AntExample.war"
+			  update="true"
+			  war="file:dist/AntExample.war" />
+	</target>
 	<target name="clean">
 		<delete dir="dist" />
 		<delete dir="build" />
