Addded index.html updated build.xml

--- a/build.xml
+++ b/build.xml
@@ -25,7 +25,7 @@
 			<classes dir="build/classes"/>
 		</war>
 	</target>
-	<target name="buildAndDeploy" depends="war">
+<!--	<target name="buildAndDeploy" depends="war">
 	  <deploy url="http://ec2-54-173-114-74.compute-1.amazonaws.com:8080"
 			  username="admin"
 			  password="admin"
@@ -33,6 +33,7 @@
 			  update="true"
 			  war="file:dist/AntExample.war" />
 	</target>
+-->
 	<target name="clean">
 		<delete dir="dist" />
 		<delete dir="build" />
