--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -11,6 +11,7 @@
         <url-pattern>*.htm</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
         <welcome-file>redirect.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
