--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" ?> 
 <project name="AntExample1" default="war">
-
+	<property name="env" value="dev"/>
+	<property name="ver" value="1.0.0"/>
+	<property name="buildNumber" value="1"/>
 	<path id="compile.classpath">
 		<fileset dir="WebContent/WEB-INF/lib">
 			<include name="*.jar"/>
@@ -19,9 +21,6 @@
 	</target>
 	
 	<target name="war" depends="compile">
-		<property name="env" value="dev"/>
-		<property name="ver" value="1.0.0"/>
-		<property name="buildNumber" value="1"/>
 		<war destfile="dist/AntExample-${env}-${ver}-${buildNumber}.war" webxml="WebContent/WEB-INF/web.xml">
 			<fileset dir="WebContent"/>
 			<lib dir="WebContent/WEB-INF/lib"/>
@@ -42,19 +41,19 @@
 	<target name="stage-tomcat" depends="war">	
 		<echo message="Staging Tomcat Started" />
 		<echo message="Unpacking Tomcat zip" />
-		<delete dir="stage-tomcat/tomcat" />
+		<delete dir="stage-tomcat" />
 		<delete dir="stage-tomcat/tomcat" />
 		<mkdir dir="stage-tomcat/tomcat" />
-		<unzip src="softwares/tomcat.zip" dest="stage-tomcat/tomcat" />
-		<copy todir="softwares/tomcat/web-apps/">
-			<fileset dir="dist" includes="AntExample-${env}-${ver}-${buildNumber}.war" />
-		</copy>
+		<unzip src="softwares/tomcat.zip" dest="stage-tomcat/" />
+		<copy file="dist/AntExample-${env}-${ver}-${buildNumber}.war" tofile="stage-tomcat/tomcat/webapps/AntExample.war"/>
 		<zip destfile="stage-tomcat/tomcat.zip" basedir="stage-tomcat/tomcat" />
+		<delete dir="stage-tomcat/tomcat" />
 		<echo message="Staging Tomcat has been Completed" />
 	</target>
 	<target name="clean">
 		<delete dir="dist" />
 		<delete dir="build" />
+		<delete dir="stage-tomcat" />
 	</target>
 	
 </project>
