--- a/build.xml
+++ b/build.xml
@@ -1,59 +1,113 @@
-<?xml version="1.0" ?> 
+<?xml version="1.0" ?>
 <project name="AntExample1" default="war">
-	<property name="env" value="dev"/>
-	<property name="ver" value="1.0.0"/>
-	<property name="buildNumber" value="1"/>
-	<path id="compile.classpath">
-		<fileset dir="WebContent/WEB-INF/lib">
-			<include name="*.jar"/>
-		</fileset>
-	</path>
-	
-	<target name="init" depends="clean">
-		<mkdir dir="build/classes"/>
-		<mkdir dir="dist" />
-	</target>
-	
-	<target name="compile" depends="init" >
-		<javac destdir="build/classes" debug="true" srcdir="src">
-			<classpath refid="compile.classpath"/>
-		</javac>
-	</target>
-	
-	<target name="war" depends="compile">
-		<war destfile="dist/AntExample-${env}-${ver}-${buildNumber}.war" webxml="WebContent/WEB-INF/web.xml">
-			<fileset dir="WebContent"/>
-			<lib dir="WebContent/WEB-INF/lib"/>
-			<classes dir="build/classes"/>
-		</war>
-	</target>
-<!--	<target name="buildAndDeploy" depends="war">
-	  <deploy url="http://ec2-54-173-114-74.compute-1.amazonaws.com:8080"
-			  username="admin"
-			  password="admin"
-			  path="dist/AntExample.war"
-			  update="true"
-			  war="file:dist/AntExample.war" />
-	</target>
+        <property name="env" value="dev"/>
+        <property name="ver" value="1.0.0"/>
+        <property name="buildNumber" value="1"/>
+        <property name="username" value="tomcat"/>
+        <property name="password" value="tomcat"/>
+        <path id="compile.classpath">
+                <fileset dir="WebContent/WEB-INF/lib">
+                        <include name="*.jar"/>
+                </fileset>
+        </path>
+
+        <target name="init" depends="clean">
+                <mkdir dir="build/classes"/>
+                <mkdir dir="dist" />
+        </target>
+
+        <target name="compile" depends="init" >
+                <javac destdir="build/classes" debug="true" srcdir="src">
+                        <classpath refid="compile.classpath"/>
+                </javac>
+        </target>
+
+        <target name="war" depends="compile">
+                <war destfile="dist/AntExample-${env}-${ver}-${buildNumber}.war" webxml="WebContent/WEB-INF/web.xml">
+                        <fileset dir="WebContent"/>
+                        <lib dir="WebContent/WEB-INF/lib"/>
+                        <classes dir="build/classes"/>
+                </war>
+        </target>
+<!--    <target name="buildAndDeploy" depends="war">
+          <deploy url="http://ec2-54-173-114-74.compute-1.amazonaws.com:8080"
+                          username="admin"
+                          password="admin"
+                          path="dist/AntExample.war"
+                          update="true"
+                          war="file:dist/AntExample.war" />
+        </target>
 -->
-	<target name="unpack-tomcat" >
-	</target>
-	<target name="stage-tomcat" depends="war">	
-		<echo message="Staging Tomcat Started" />
-		<echo message="Unpacking Tomcat zip" />
-		<delete dir="stage-tomcat" />
-		<delete dir="stage-tomcat/tomcat" />
-		<mkdir dir="stage-tomcat/tomcat" />
-		<unzip src="softwares/tomcat.zip" dest="stage-tomcat/" />
-		<copy file="dist/AntExample-${env}-${ver}-${buildNumber}.war" tofile="stage-tomcat/tomcat/webapps/AntExample.war"/>
-		<zip destfile="stage-tomcat/tomcat.zip" basedir="stage-tomcat/tomcat" />
-		<delete dir="stage-tomcat/tomcat" />
-		<echo message="Staging Tomcat has been Completed" />
-	</target>
-	<target name="clean">
-		<delete dir="dist" />
-		<delete dir="build" />
-		<delete dir="stage-tomcat" />
-	</target>
-	
+        <target name="unpack-tomcat" >
+        </target>
+        <target name="stage-tomcat" depends="war">
+                <echo message="Staging Tomcat Started" />
+                <echo message="Unpacking Tomcat zip" />
+                <delete dir="stage-tomcat" />
+                <delete dir="stage-tomcat/tomcat" />
+                <mkdir dir="stage-tomcat/tomcat" />
+                <unzip src="softwares/tomcat.zip" dest="stage-tomcat/" />
+                <copy file="dist/AntExample-${env}-${ver}-${buildNumber}.war" tofile="stage-tomcat/tomcat/webapps/AntExample.war"/>
+                <zip destfile="stage-tomcat/tomcat.zip" basedir="stage-tomcat/tomcat" />
+                <delete dir="stage-tomcat/tomcat" />
+                <echo message="Staging Tomcat has been Completed" />
+        </target>
+        <target name="clean">
+                <delete dir="dist" />
+                <delete dir="build" />
+                <delete dir="stage-tomcat" />
+        </target>
+		<target name="stop-tomcat"> 
+			<!--<sshexec host="34.224.41.118"
+				 username="${username}"
+				 password="${password}"
+				 command="pkill -9 -f /opt/tomcat"/> -->
+				<path id="jsch.class.path">    
+						<pathelement location="/usr/share/ant/lib/ant-jsch-1.10.5.jar" />
+						<pathelement location="/usr/share/ant/lib/jsch-0.1.54.jar" />
+				</path>
+				<taskdef name="scp" classname="org.apache.tools.ant.taskdefs.optional.ssh.Scp" classpathref="jsch.class.path" />
+				<taskdef name="sshexec" classname="org.apache.tools.ant.taskdefs.optional.ssh.SSHExec" classpathref="jsch.class.path" />
+				<sshexec trust="true" 
+				verbose="true"
+				host="34.224.41.118"
+				username="${username}"
+				password="${password}"
+				command="sudo pkill -9 -f /opt/tomcat"
+				failonerror="false"/>
+		</target> 
+		
+		<target name="start-tomcat" depends="stop-tomcat"> 
+				<path id="jsch.class.path">    
+					<pathelement location="/usr/share/ant/lib/ant-jsch-1.10.5.jar" />
+					<pathelement location="/usr/share/ant/lib/jsch-0.1.54.jar" />
+				</path>
+				<taskdef name="scp" classname="org.apache.tools.ant.taskdefs.optional.ssh.Scp" classpathref="jsch.class.path" />
+				<taskdef name="sshexec" classname="org.apache.tools.ant.taskdefs.optional.ssh.SSHExec" classpathref="jsch.class.path" />
+				<sshexec trust="true" 
+				verbose="true"
+				host="34.224.41.118"
+				username="${username}"
+				password="${password}"
+				command="sudo /opt/tomcat/bin/catalina.sh start "
+				failonerror="false"/>
+		</target> 
+		
+		<target name="deploy" depends="stop-tomcat"> 
+			<scp file="stage-tomcat/tomcat.zip" todir="${username}@34.224.41.118:/opt/" password="${password}" trust="true"/>
+				<path id="jsch.class.path">    
+					<pathelement location="/usr/share/ant/lib/ant-jsch-1.10.5.jar" />
+					<pathelement location="/usr/share/ant/lib/jsch-0.1.54.jar" />
+				</path>
+				<taskdef name="scp" classname="org.apache.tools.ant.taskdefs.optional.ssh.Scp" classpathref="jsch.class.path" />
+				<taskdef name="sshexec" classname="org.apache.tools.ant.taskdefs.optional.ssh.SSHExec" classpathref="jsch.class.path" />
+				<sshexec trust="true" 
+				verbose="true"
+				host="34.224.41.118"
+				username="${username}"
+				password="${password}"
+				command="rm -rf /opt/tomcat ; unzip /opt/tomcat.zip -d /opt/tomcat ; chmod 777 /opt/tomcat/bin/* -R ; sudo /opt/tomcat/bin/catalina.sh start "
+				failonerror="false"/>
+		</target> 
 </project>
+
